--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,5 @@
+@desktops: ~"only screen and (min-width: 480px)";
+
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,700|Give+You+Glory|Pacifico');
 
 body {
@@ -12,6 +14,7 @@ img {
     border-radius: 4px;
 }
 
+.container-fluid,
 .container {
     padding: 0;
 }
@@ -43,6 +46,14 @@ img {
     margin: 0 1em;
     padding-top: 3em;
     position: relative;
+
+    @media @desktops {
+        .text {
+            max-width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 }
 
 .section_1 {
@@ -52,6 +63,10 @@ img {
     padding-top: 0;
     background-image: url('../images/1.jpg');
     background-size: cover;
+
+    @media @desktops {
+        background-image: url('../images/8.jpg')
+    }
 
     .over {
         position: absolute;
@@ -75,6 +90,10 @@ img {
         font-weight: 700;
         border-radius: 0.3em;
         color: #546386;
+
+        @media @desktops {
+            font-size: 1.75em;
+        }
 
         .heart {
             display: table-cell;
@@ -126,6 +145,10 @@ img {
 .album {
     display: table;
     margin: 2em -15px;
+
+    @media @desktops {
+        margin: 2em -20%;
+    }
 
     img {
         display: block;
@@ -193,6 +216,10 @@ img {
     background-image: url('../images/7.jpg');
     background-size: cover;
 
+    @media @desktops {
+        background-image: url('../images/9.jpg')
+    }
+
     .over {
         position: absolute;
         width: 100%;
@@ -204,6 +231,17 @@ img {
             font-size: 1.75em;
             padding: 0 2em;
             color: #b5875a;
+
+            @media @desktops {
+                font-size: 2em;
+                margin-top: 1em;
+                padding: 0 2em;
+                background-color: #2a427b;
+                color: #FFF;
+                display: inline-block;
+                padding: 0.5em 2em;
+                border-radius: 1em;
+            }
         }
     }
 }
