--- a/less/style.less
+++ b/less/style.less
@@ -32,6 +32,10 @@ img {
     font-size: 1.75em;
     line-height: 1.25em;
     color: #546386;
+
+    @media @desktops {
+        font-size: 2em;
+    }
 }
 
 .text {
