--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,10 @@
 @desktops: ~"only screen and (min-width: 480px)";
+@mobiles: ~"only screen and (max-width: 480px)";
+
+@primaryColor: #546386;
+@alternateAccent: #b37d48; // #b5875a;
+@ctaColor: #04b7a4; // #4999ce;
+@ctaSecondary: #1a8fda;
 
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,700|Give+You+Glory|Pacifico');
 
@@ -12,6 +18,43 @@ body {
 img {
     max-width: 100%;
     border-radius: 4px;
+}
+
+@media @mobiles {
+    p {
+        font-size: 20px;
+        font-weight: 300;
+    }
+}
+
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
+    padding: 0.5em 2em;
+    font-size: 1.15em;
+    font-weight: 700;
+    background-image: none;
+    background-color: @ctaColor;
+    background-image: -webkit-linear-gradient(top left, @ctaColor 0%, @ctaSecondary 100%);
+    background-image: -moz-linear-gradient(top left, @ctaColor 0%, @ctaSecondary 100%);
+    background-image: -ms-linear-gradient(top left, @ctaColor 0%, @ctaSecondary 100%);
+    background-image: -o-linear-gradient(top left, @ctaColor 0%, @ctaSecondary 100%);
+    background-image: linear-gradient(top left, @ctaColor 0%, @ctaSecondary 100%);
+    background-position: 0;
+    border: none;
+    outline: none;
+    box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.2);
+    text-shadow: none;
+    transition: all 0.25s ease-in-out;
+}
+
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:active:hover,
+.btn-primary:focus {
+    box-shadow: 1px 6px 24px rgba(0, 0, 0, 0.35);
 }
 
 .container-fluid,
@@ -29,9 +72,9 @@ img {
 
 .h2 {
     margin: 0 0 1em 0;
-    font-size: 1.75em;
+    font-size: 2em;
     line-height: 1.25em;
-    color: #546386;
+    color: @primaryColor;
 
     @media @desktops {
         font-size: 2em;
@@ -69,7 +112,8 @@ img {
     background-size: cover;
 
     @media @desktops {
-        background-image: url('../images/8.jpg')
+        background-image: url('../images/8a.jpg');
+        background-position: center;
     }
 
     .over {
@@ -83,7 +127,11 @@ img {
     h1 {
         margin: 0;
         font-size: 3.25em;
-        color: #b5875a;
+        color: @alternateAccent;
+
+        @media @desktops {
+            color: #5F5F5F;
+        }
     }
 
     .h2 {
@@ -93,9 +141,10 @@ img {
         font-size: 1.25em;
         font-weight: 700;
         border-radius: 0.3em;
-        color: #546386;
+        color: @primaryColor;
 
         @media @desktops {
+            color: #d78303;
             font-size: 1.75em;
         }
 
@@ -141,8 +190,8 @@ img {
 
     .heart {
         text-align: center;
-        font-size: 1.5em;
-        color: #546386;
+        font-size: 1.75em;
+        color: @primaryColor;
     }
 }
 
@@ -160,7 +209,7 @@ img {
 
     .left {
         display: table-cell;
-        vertical-align: top;
+        vertical-align: middle;
         width: 28%;
         padding: 0 8px;
     }
@@ -174,7 +223,7 @@ img {
 
     .right {
         display: table-cell;
-        vertical-align: bottom;
+        vertical-align: middle;
         width: 28%;
         padding: 0 8px;
     }
@@ -211,17 +260,42 @@ img {
     .text {
         padding: 1em 2em;
     }
+
+    .directions {
+        margin-top: 1em;
+    }
+
+    @media @desktops {
+        padding-bottom: 2em;
+
+        .hotel {
+            font-weight: 300;
+        }
+
+        .text {
+            margin-bottom: 2em;
+
+            p {
+                margin-bottom: 0;
+
+                + p {
+                    margin-top: 0;
+                }
+            }
+        }
+    }
 }
 
 .section_6 {
     width: 100%;
     height: 100vh;
     margin: 3em 0 0;
-    background-image: url('../images/7.jpg');
+    background-image: url('../images/16.jpg');
     background-size: cover;
 
     @media @desktops {
-        background-image: url('../images/9.jpg')
+        background-image: url('../images/9.jpg');
+        background-position: center;
     }
 
     .over {
@@ -229,22 +303,23 @@ img {
         width: 100%;
         padding: 0;
         margin: 0;
-        top: 1em;
+        top: 3em;
 
         .text {
-            font-size: 1.75em;
-            padding: 0 2em;
-            color: #b5875a;
+            font-size: 2.5em;
+            padding: 0 2rem;
+            color: #FFF;
 
             @media @desktops {
-                font-size: 2em;
+                font-size: 2.25em;
                 margin-top: 1em;
                 padding: 0 2em;
-                background-color: #2a427b;
-                color: #FFF;
+                color: #2a427b;
+                background-color: rgba(255, 255, 255, 0.85);
                 display: inline-block;
-                padding: 0.5em 2em;
-                border-radius: 1em;
+                padding: .5em 1em;
+                border-radius: 1rem;
+                box-shadow: 1px 4px 24px rgba(0, 0, 0, 0.5);
             }
         }
     }
